# decathon-chat-bot

./: .env.example  .gitignore  .replit  CLAUDE.md  README.md  main.py  mise.toml  pyproject.toml
decathlon/app/: agent.py  catalog.py  main.py  productdb.py  search.py
decathlon/app/static/: index.html
decathlon/core/: documents.py  embeddings.py  vectordb.py
decathlon/indexing/: index.py  query.py
decathlon/scrapers/: categories.py  products.py
