[project]
name = "decathlon"
version = "0.1.0"
description = "Chat consultant for the Decathlon (KZ) catalog — local LLM + vector search"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "chromadb>=0.5",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "openai>=1.40",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.47.0",
]
